feat: now each l2 is its own sheet and it displays population data

--- a/citypopulation_webscraper.ipynb
+++ b/citypopulation_webscraper.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +325,8 @@
     "        if row:\n",
     "            rows.append(row)\n",
     "\n",
-    "    header = rows[0][1:]\n",
-    "    new_header = ['L1', 'L2'] + header\n",
+    "    # header = rows[0][1:]\n",
+    "    new_header = ['L1', 'L2'] + headers[1:]\n",
     "\n",
     "    data = []\n",
     "\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m country \u001b[38;5;129;01min\u001b[39;00m div_admin_countries:\n\u001b[32m     13\u001b[39m     page = requests.get(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://www.citypopulation.de/en/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/div/admin/\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     df, year = \u001b[43mmake_df_div\u001b[49m(page)\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     17\u001b[39m     page = requests.get(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://www.citypopulation.de/en/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/admin/\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m country \u001b[38;5;129;01min\u001b[39;00m div_admin_countries:\n\u001b[32m     13\u001b[39m     page = requests.get(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://www.citypopulation.de/en/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/div/admin/\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     df, year = \u001b[43mmake_df_div\u001b[49m(page)\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     17\u001b[39m     page = requests.get(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://www.citypopulation.de/en/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/admin/\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[31mNameError\u001b[39m: name 'make_df_div' is not defined"
      ]
     }
@@ -445,7 +445,7 @@
     "\n",
     "    elif country in div_admin_countries:\n",
     "        page = requests.get(f\"https://www.citypopulation.de/en/{country}/div/admin/\")\n",
-    "        df, year = make_df_div(page)\n",
+    "        df, year = make_df_blank(page)\n",
     "    \n",
     "    else:\n",
     "        page = requests.get(f\"https://www.citypopulation.de/en/{country}/admin/\")\n",
@@ -3618,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4337,7 +4337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5233,7 +5233,7 @@
          "type": "string"
         },
         {
-         "name": "Amapá",
+         "name": "L2",
          "rawType": "object",
          "type": "string"
         },
@@ -5274,7 +5274,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "f9d61f74-eb79-4416-a705-f971aa5a794d",
+       "ref": "0c7443de-bd11-4fcc-83f9-d1ff5942ed60",
        "rows": [
         [
          "0",
@@ -5494,7 +5494,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>L1</th>\n",
-       "      <th>Amapá</th>\n",
+       "      <th>L2</th>\n",
        "      <th>State</th>\n",
        "      <th>289,397</th>\n",
        "      <th>477,032</th>\n",
@@ -5702,7 +5702,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       L1                    Amapá         State  289,397  477,032  669,526  \\\n",
+       "       L1                       L2         State  289,397  477,032  669,526  \\\n",
        "0   Amapá                    Amapá  Municipality    6,655    7,121    8,069   \n",
        "1   Amapá                 Calçoene  Municipality    5,177    6,730    9,000   \n",
        "2   Amapá                   Cutias  Municipality    1,676    3,280    4,696   \n",
@@ -5739,7 +5739,7 @@
        "15   11,291   11,922  →  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5903,7 +5903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -5927,7 +5927,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b6384f28-aa48-4f42-a697-6a2e5525c9b3",
+       "ref": "c63975be-5f4f-4b86-b155-796dc41e4089",
        "rows": [
         [
          "0",
@@ -6286,7 +6286,7 @@
        "[4887 rows x 2 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6371,11 +6371,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "brazil_df.to_excel('data/brazil_df.xlsx', index=False)"
+    "# brazil_df.to_excel('data/brazil_df.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter('data/brazil_l2_population.xlsx', engine='openpyxl') as writer:\n",
+    "    for site in brazil_sites:\n",
+    "        page = requests.get(site)\n",
+    "        df = make_df_l2(page)\n",
+    "        state = df['L1'][0]\n",
+    "        df.to_excel(writer, sheet_name=state, index=False)\n",
+    "    workbook = writer.book"
    ]
   }
  ],
