chore: i forgot what adhoc thing i needed to do

--- a/map_maker.ipynb
+++ b/map_maker.ipynb
@@ -215,7 +215,7 @@
    "id": "e0b4f8b4",
    "metadata": {},
    "source": [
-    "## Funcs to eplacing the province names"
+    "## Funcs for replacing the province names"
    ]
   },
   {
